@@ -1,3 +1,9 @@
+2012-01-04
+----------
+Changes:
+-Added option to libgpujpeg Makefile for moving gpu huffman coder tables into constant memory
+-Option is default set to true and makes better performance
+
 2012-01-03
 ----------
 Changes:
